Added user ID migration
